--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
                 </div>
             </section>
 
+
+            <section>
+                <h1>
+                    Mercedes-Benz
+                </h1>
+            </section>
+
             <section class="recent">
                 <p class="portfolio__pre-title">
                     Updates & News
